5.5.1
-----
1. Enable repeat by default for alarms.

5.5.0
-----
 1. If using Lyrion theme and colour from cover, then default to green
    highlight.
 2. Add option to show home-screen shortcuts in navigation drawer.
 3. Allow smaller grid items if screen 350px or less.
 4. Scale grid icons by grid size.
 5. If viewing images from browse then allow swiping left/right to view
    prev/next images.
 6. Add button, shown on hover, to view images.
 7. Add play/add/insert/shuffle buttons when viewing some images.
 8. Add captions to images in viewer.
 9. Only show detailed sub-toolbar for online items if also have space for
    image.
10. If using rounded covers then use circles for artist images.
11. Support plural/singular user-defined role names.
12. Fix showing 'composed by', etc., in queue and elsewhere.
13. Fix showing/hiding of 'Play shuffled' action in certain cases.
14. Fix 'Bookmarks' plugin.
15. Only use detailed sub-toolbar if wide enough for cover or have text for
    at least one of bottom 2 lines.

5.4.4
-----
1. Add 'Show image' to more context menus.
2. Fix add/play and menu icons sometimes showing when they should not.
3. When resolving album favourite resolve artist_id.
4. Fix browsing favourited works albums - thanks to Darrell.
5. Fix blank/empty button in 'Server settings' if LMS is on pCP.
6. Use menu in 'Server settings' toolbar if 3 or more items.
7. Scroll to top when reload random albums/releases.
8. Change default album/release icon to reflect release type support.
9. Fix grid clipping on certain widths.

5.4.3
-----
1. Save settings when change player via menu in player settings dialog.
2. Only fetch list of works if not already showing list of works.
3. Remove role filter when listing album's via artist link.
4. Fix search results sub-title link highlight.
5. Make each artist clickable in album list sub-titles.
6. Use composer as sub-title for Works search results.
7. Fix treeview rendering.